- fixed jumping when the user change the menu in the header - updated the breadcrumbs height to make sure they are consistent on all screens

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,10 @@
     font-family: Avenir, Roboto, Arial, serif;
   }
 
+  .routes-wrapper {
+    max-height: calc(100vh - 4.125rem); /*66px*/
+  }
+
   h1 {
     @apply text-h1 leading-10 font-extrabold text-text;
   }
